Portfolio v1.4 | Fixed display issues on smaller mobile devices

--- a/src/app/Components/page-content-landing/landing-page-content.component.scss
+++ b/src/app/Components/page-content-landing/landing-page-content.component.scss
@@ -68,7 +68,7 @@
 
       .side-title {
         font-family: "Abril Fatface", serif;
-        font-size: 56px;
+        font-size: 36px;
         font-weight: 400;
         margin: 0;
         padding: 0;
