--- a/src/app/Components/title-screen/title-screen.component.scss
+++ b/src/app/Components/title-screen/title-screen.component.scss
@@ -48,7 +48,7 @@
 
       .title {
         font-family: "Abril Fatface", serif;
-        font-size: 62px;
+        font-size: 48px;
         font-weight: 400;
         margin: 0;
         line-height: 0.8;
